# app/Models/Province.php
@@ -5,20 +5,19 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class School extends Model
+class Province extends Model
 {
     use HasFactory;
 
     protected $fillable = [
+        'id',
         'name',
-        'email',
-        'classrooms',
-        'province_id'
+        'description'
     ];
-    
 
-    public function province()
+
+    public function schools()
     {
-        return $this->belongsTo(Province::class);
+        return $this->hasMany(School::class);
     }
 }
