# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\ProvinceController;
 use App\Http\Controllers\SchoolController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -20,4 +21,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::apiResource("school",SchoolController::class);
+
 Route::post("school-excel",[SchoolController::class,"store_excel"]);
+
+Route::post("receive-provinces",[ProvinceController::class,"fetchAndSaveProvinces"]);
+
+Route::get("province",[ProvinceController::class,"index"]);
